--- a/ember/package.json
+++ b/ember/package.json
@@ -27,10 +27,10 @@
     "ember-cli-babel": "^6.0.0",
     "ember-cli-chai": "^0.4.1",
     "ember-cli-dependency-checker": "^2.0.0",
-    "ember-cli-deploy": "^0.6.4",
-    "ember-cli-deploy-build": "^0.1.1",
-    "ember-cli-deploy-gzip": "0.2.3",
-    "ember-cli-deploy-revision-data": "^0.3.2",
+    "ember-cli-deploy": "^1.0.0",
+    "ember-cli-deploy-build": "^1.1.0",
+    "ember-cli-deploy-gzip": "^1.0.0",
+    "ember-cli-deploy-revision-data": "^1.0.0",
     "ember-cli-deploy-rsync-assets": "0.2.0",
     "ember-cli-eslint": "^3.1.0",
     "ember-cli-htmlbars": "^1.1.1",
