--- a/ember/package.json
+++ b/ember/package.json
@@ -19,8 +19,10 @@
     "ember-awesome-macros": "^0.35.3"
   },
   "devDependencies": {
+    "bootstrap-sass": "^3.3.7",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
+    "ember-bootstrap": "^1.0.0-rc.1",
     "ember-cli": "^2.15.0-beta.2",
     "ember-cli-active-link-wrapper": "^0.3.1",
     "ember-cli-app-version": "^3.0.0",
@@ -55,7 +57,6 @@
     "ember-page-title": "^3.1.5",
     "ember-power-select": "^1.8.4",
     "ember-resolver": "^4.0.0",
-    "ember-sass-bootstrap": "0.1.2",
     "ember-simple-auth": "^1.3.0",
     "ember-source": "~2.13.0",
     "ember-svg-jar": "^0.10.3",
