--- a/ember/package.json
+++ b/ember/package.json
@@ -32,7 +32,7 @@
     "ember-cli-deploy-build": "^1.1.0",
     "ember-cli-deploy-gzip": "^1.0.0",
     "ember-cli-deploy-revision-data": "^1.0.0",
-    "ember-cli-deploy-rsync-assets": "0.2.0",
+    "ember-cli-deploy-rsync-assets": "^0.2.1",
     "ember-cli-eslint": "^3.1.0",
     "ember-cli-htmlbars": "^1.1.1",
     "ember-cli-htmlbars-inline-precompile": "^0.4.0",
