--- a/ember/package.json
+++ b/ember/package.json
@@ -11,7 +11,7 @@
   "repository": "",
   "scripts": {
     "build": "ember build",
-    "lint": "eslint app addon blueprints config server test-support tests *.js",
+    "lint": "node_modules/eslint/bin/eslint.js app addon blueprints config server test-support tests *.js",
     "start": "ember server",
     "test": "ember test"
   },
@@ -60,7 +60,6 @@
     "ember-source": "~2.13.0",
     "ember-svg-jar": "^0.11.1",
     "ember-truth-helpers": "^1.3.0",
-    "eslint": "^3.17.1",
     "eslint-config-simplabs": "0.4.0",
     "eslint-plugin-ember": "^3.0.2",
     "eslint-plugin-mocha": "^4.8.0",
