--- a/ember/package.json
+++ b/ember/package.json
@@ -60,6 +60,7 @@
     "ember-simple-auth": "^1.4.0",
     "ember-source": "~2.13.0",
     "ember-svg-jar": "^0.11.1",
+    "ember-test-selectors": "^0.3.7",
     "ember-truth-helpers": "^1.3.0",
     "eslint-config-simplabs": "0.4.0",
     "eslint-plugin-ember": "^4.3.0",
