--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
+dist: trusty
+sudo: false
+
 language: python
 
 python:
   - 2.7
 
-sudo: false
+addons:
+  postgresql: "9.5"
+  apt:
+    packages:
+      - postgresql-9.5-postgis-2.3
 
 services:
   - postgresql
