--- a/ember/package.json
+++ b/ember/package.json
@@ -64,6 +64,7 @@
     "ember-svg-jar": "^0.11.1",
     "ember-test-selectors": "^0.3.7",
     "ember-truth-helpers": "^1.3.0",
+    "ember-web-app": "^2.0.0",
     "eslint-config-simplabs": "0.4.0",
     "eslint-plugin-ember": "^4.3.0",
     "eslint-plugin-mocha": "^4.11.0",
