--- a/ember/.travis.yml
+++ b/ember/.travis.yml
@@ -4,6 +4,10 @@ node_js:
   - "6"
 
 sudo: false
+dist: trusty
+
+addons:
+  chrome: stable
 
 cache:
   directories:
@@ -12,11 +16,8 @@ cache:
 
 before_install:
   - npm config set spin false
-  - npm install -g bower phantomjs-prebuilt
+  - npm install -g bower
 
 install:
   - npm install
   - bower install
-
-script:
-  - npm test
