--- a/ember/package.json
+++ b/ember/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "ember build",
     "lint": "node_modules/eslint/bin/eslint.js app addon blueprints config server test-support tests *.js",
-    "start": "ember server",
+    "start": "ember serve",
     "test": "ember test"
   },
   "dependencies": {
@@ -26,7 +26,7 @@
     "chai-dom": "^1.5.0",
     "ember-ajax": "^3.0.0",
     "ember-bootstrap": "kaliber5/ember-bootstrap",
-    "ember-cli": "~2.16.2",
+    "ember-cli": "~2.17.2",
     "ember-cli-app-version": "^3.1.0",
     "ember-cli-babel": "^6.8.1",
     "ember-cli-chai": "^0.4.2",
