--- a/ember/package.json
+++ b/ember/package.json
@@ -40,7 +40,7 @@
     "ember-cli-htmlbars": "^2.0.3",
     "ember-cli-htmlbars-inline-precompile": "^1.0.2",
     "ember-cli-inject-live-reload": "^1.7.0",
-    "ember-cli-mocha": "^0.14.5-beta.1",
+    "ember-cli-mocha": "^0.15.0",
     "ember-cli-pace": "^0.1.0",
     "ember-cli-pretender": "^1.0.1",
     "ember-cli-sass": "^7.1.4",
