--- a/ember/package.json
+++ b/ember/package.json
@@ -25,7 +25,7 @@
     "broccoli-asset-rev": "^2.6.0",
     "chai-dom": "^1.7.0",
     "ember-ajax": "^3.0.0",
-    "ember-bootstrap": "kaliber5/ember-bootstrap",
+    "ember-bootstrap": "^1.2.1",
     "ember-cli": "~2.18.0",
     "ember-cli-app-version": "^3.1.3",
     "ember-cli-babel": "^6.11.0",
