supervisor: Add  options

--- a/supervisor/skylines.conf
+++ b/supervisor/skylines.conf
@@ -4,3 +4,4 @@ directory=/home/skylines/
 user=skylines
 stdout_logfile=/var/log/skylines/fastcgi/out.log
 stderr_logfile=/var/log/skylines/fastcgi/err.log
+stopsignal=INT
