--- a/supervisor/skylines.conf
+++ b/supervisor/skylines.conf
@@ -5,3 +5,7 @@ user=skylines
 stdout_logfile=/var/log/skylines/fastcgi/out.log
 stderr_logfile=/var/log/skylines/fastcgi/err.log
 stopsignal=INT
+
+[eventlistener:httpok-skylines]
+command=httpok -p skylines https://skylines.aero/api/flights/latest
+events=TICK_60
