--- a/ember/package.json
+++ b/ember/package.json
@@ -49,7 +49,7 @@
     "ember-concurrency": "^0.8.18",
     "ember-cookies": "^0.3.0",
     "ember-cp-validations": "^3.5.3",
-    "ember-font-awesome": "^3.1.1",
+    "ember-font-awesome": "^4.0.0-rc.3",
     "ember-href-to": "^1.15.1",
     "ember-intl": "^2.33.1",
     "ember-intl-cp-validations": "^3.0.1",
