--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,7 @@ babel = "==2.3.4"
 flask-cache = "==0.12"
 flask-migrate = "==1.2.0"
 flask-script = "==0.6.7"
-flask-sqlalchemy = "==1.0"
+flask-sqlalchemy = "*"
 sqlalchemy = "==0.8.2"
 alembic = "==0.6.3"
 "psycopg2" = "==2.7.3.2"
