--- a/Pipfile
+++ b/Pipfile
@@ -29,8 +29,8 @@ pyproj = "==1.9.3"
 gevent = "==1.2.2"
 webargs = "==1.2.0"
 marshmallow = "==2.8.0"
-flask-oauthlib = "==0.9.2"
-oauthlib = "==0.7.2"
+flask-oauthlib = "*"
+oauthlib = "*"
 raven = {extras = ["flask"], version = "==5.27.1"}
 uwsgi = "*"
 
