--- a/Pipfile
+++ b/Pipfile
@@ -17,7 +17,7 @@ flask-sqlalchemy = "*"
 sqlalchemy = "==0.8.2"
 alembic = "==0.6.3"
 "psycopg2" = "==2.7.3.2"
-"geoalchemy2" = "==0.2.3"
+"geoalchemy2" = "*"
 shapely = "==1.3.0"
 "crc16" = "==0.1.1"
 pytz = "*"
