--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ flask = "==0.10.1"
 werkzeug = "*"
 babel = "==2.3.4"
 flask-cache = "==0.12"
-flask-migrate = "==1.2.0"
+flask-migrate = "*"
 flask-script = "==0.6.7"
 flask-sqlalchemy = "*"
 sqlalchemy = "==0.8.2"
