--- a/Pipfile
+++ b/Pipfile
@@ -15,7 +15,7 @@ flask-migrate = "*"
 flask-script = "==0.6.7"
 flask-sqlalchemy = "*"
 sqlalchemy = "==0.8.2"
-alembic = "==0.6.3"
+alembic = "*"
 "psycopg2" = "==2.7.3.2"
 "geoalchemy2" = "*"
 shapely = "==1.3.0"
