--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ python_version = "2.7"
 flask = "==0.10.1"
 werkzeug = "*"
 babel = "==2.3.4"
-flask-cache = "==0.12"
+flask-cache = "*"
 flask-migrate = "*"
 flask-script = "==0.6.7"
 flask-sqlalchemy = "*"
