--- a/Pipfile
+++ b/Pipfile
@@ -27,7 +27,7 @@ aerofiles = "==0.1.1"
 "enum34" = "==1.1.6"
 pyproj = "==1.9.3"
 gevent = "==1.2.2"
-webargs = "==1.2.0"
+webargs = "*"
 marshmallow = "*"
 flask-oauthlib = "*"
 oauthlib = "*"
