Use  protocol for

--- a/uwsgi/mapproxy.ini
+++ b/uwsgi/mapproxy.ini
@@ -4,6 +4,7 @@ pyargv = /home/skylines/config/mapproxy.yaml
 wsgi-file = /home/skylines/src/uwsgi/mapproxy.py
 socket = /run/skylines/mapproxy-uwsgi.socket
 stats = /run/skylines/mapproxy-uwsgi-stats.socket
+protocol = http
 processes = 1
 threads = 10
 chmod-socket = 777
