--- a/uwsgi/mapserver.ini
+++ b/uwsgi/mapserver.ini
@@ -4,6 +4,7 @@ pyargv = /home/skylines/src/mapserver/skylines.map
 wsgi-file = /home/skylines/src/uwsgi/mapserver.py
 socket = /run/skylines/mapserver-uwsgi.socket
 stats = /run/skylines/mapserver-uwsgi-stats.socket
+protocol = http
 threads = 10
 chmod-socket = 777
 memory-report = True
