--- a/uwsgi/skylines.ini
+++ b/uwsgi/skylines.ini
@@ -3,6 +3,7 @@ chdir = /home/skylines/src/
 wsgi-file = /home/skylines/src/uwsgi/skylines.py
 socket = /run/skylines/skylines-uwsgi.socket
 stats = /run/skylines/skylines-uwsgi-stats.socket
+protocol = http
 threads = 10
 chmod-socket = 777
 memory-report = True
