--- a/Pipfile
+++ b/Pipfile
@@ -33,6 +33,7 @@ flask-oauthlib = "*"
 oauthlib = "*"
 raven = {extras = ["flask"], version = "==5.27.1"}
 uwsgi = "*"
+mapproxy = "*"
 
 [dev-packages]
 fabric = "==1.14.0"
