--- a/ember/package.json
+++ b/ember/package.json
@@ -32,7 +32,7 @@
     "ember-cli-dependency-checker": "^2.1.0",
     "ember-cli-deploy": "^1.0.2",
     "ember-cli-deploy-build": "^1.1.1",
-    "ember-cli-deploy-gzip": "^1.0.1",
+    "ember-cli-deploy-compress": "^0.2.0",
     "ember-cli-deploy-revision-data": "^1.0.0",
     "ember-cli-deploy-rsync-assets": "^0.2.1",
     "ember-cli-eslint": "^4.2.3",
