--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ python_version = "2.7"
 flask = "==1.0.*"
 werkzeug = "*"
 babel = "==2.3.4"
-flask-cache = "*"
+flask-caching = "==1.3.*"
 flask-migrate = "*"
 flask-script = "==0.6.7"
 flask-sqlalchemy = "*"
