--- a/Pipfile
+++ b/Pipfile
@@ -14,7 +14,7 @@ flask-caching = "==1.3.*"
 flask-migrate = "*"
 flask-script = "==0.6.7"
 flask-sqlalchemy = "*"
-sqlalchemy = "==0.8.2"
+sqlalchemy = "==0.9.*"
 alembic = "*"
 "psycopg2" = "==2.7.4"
 "geoalchemy2" = "*"
