Move  file to the top-level folder

--- a/.editorconfig
+++ b/.editorconfig
@@ -13,6 +13,9 @@ insert_final_newline = true
 indent_style = space
 indent_size = 2
 
+[*.py]
+indent_size = 4
+
 [*.hbs]
 insert_final_newline = false
 
