--- a/ember/package.json
+++ b/ember/package.json
@@ -57,6 +57,7 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-native-dom-helpers": "^0.6.2",
     "ember-page-title": "^4.0.3",
+    "ember-percy": "^1.4.1",
     "ember-power-select": "^2.0.2",
     "ember-resolver": "^4.5.5",
     "ember-simple-auth": "^1.6.0",
