--- a/ember/package.json
+++ b/ember/package.json
@@ -50,6 +50,7 @@
     "ember-cookies": "^0.3.0",
     "ember-cp-validations": "^3.5.3",
     "ember-font-awesome": "^4.0.0-rc.4",
+    "ember-freestyle": "^0.8.1",
     "ember-href-to": "^1.15.1",
     "ember-intl": "^2.33.2",
     "ember-intl-cp-validations": "^3.0.1",
@@ -76,5 +77,10 @@
   },
   "resolutions": {
     "ember-intl/intl": "andyearnshaw/Intl.js"
+  },
+  "ember-addon": {
+    "paths": [
+      "lib/freestyle"
+    ]
   }
 }
