--- a/ember/package.json
+++ b/ember/package.json
@@ -17,7 +17,8 @@
     "test": "ember test"
   },
   "dependencies": {
-    "ember-awesome-macros": "^1.0.1"
+    "ember-awesome-macros": "^1.0.1",
+    "remarkable": "^1.7.1"
   },
   "devDependencies": {
     "@ember/optional-features": "^0.6.1",
@@ -26,6 +27,7 @@
     "bootstrap-sass": "^3.3.7",
     "broccoli-asset-rev": "^2.7.0",
     "ember-ajax": "^3.1.0",
+    "ember-auto-import": "^1.0.0",
     "ember-bootstrap": "^2.0.0",
     "ember-cli": "~3.1.4",
     "ember-cli-app-version": "^3.2.0",
