CI: Run  as separate job

--- a/.travis.yml
+++ b/.travis.yml
@@ -66,6 +66,18 @@ jobs:
       python: 3.4
 
     - stage: test
+      env: NAME=black         # used only to make Travis UI show description
+
+      language: python
+      python: 3.6
+
+      install:
+        - pip install black==18.9b0
+
+      script:
+        - black config migrations skylines tests uwsgi *.py --check
+
+    - stage: test
       env: NAME=frontend      # used only to make Travis UI show description
 
       language: node_js
