--- a/Pipfile
+++ b/Pipfile
@@ -42,6 +42,7 @@ mapproxy = "*"
 fabric = "==1.14.0"
 pytest = "==3.9.2"
 pytest-cov = "==2.6.0"
+pytest-voluptuous = "*"
 mock = "==2.0.0"
 faker = "==0.9.2"
 "flake8" = "==3.6.0"
