--- a/ember/package.json
+++ b/ember/package.json
@@ -74,6 +74,7 @@
     "eslint-plugin-ember": "^5.2.0",
     "eslint-plugin-prettier": "^3.0.0",
     "loader.js": "^4.7.0",
+    "node-sass": "^4.9.4",
     "prettier": "1.14.3",
     "qunit-dom": "^0.8.0"
   },
