--- a/ember/package.json
+++ b/ember/package.json
@@ -30,6 +30,7 @@
     "ember-auto-import": "^1.2.21",
     "ember-bootstrap": "^2.6.1",
     "ember-cli": "~3.9.0",
+    "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.7.3",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-deploy": "^1.0.2",
@@ -41,7 +42,6 @@
     "ember-cli-htmlbars-inline-precompile": "^2.1.0",
     "ember-cli-inject-live-reload": "^2.0.1",
     "ember-cli-pace": "^0.1.0",
-    "ember-cli-qunit": "^4.4.0",
     "ember-cli-sass": "^10.0.0",
     "ember-cli-sentry": "^4.0.0",
     "ember-cli-shims": "^1.1.0",
@@ -60,6 +60,7 @@
     "ember-page-title": "^4.0.5",
     "ember-percy": "^1.5.0",
     "ember-power-select": "^2.3.1",
+    "ember-qunit": "^4.4.1",
     "ember-resolver": "^5.1.3",
     "ember-simple-auth": "^1.8.2",
     "ember-source": "~3.9.1",
