--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ jobs:
   include:
     - &backend-test
       stage: test
-      env: NAME=backend      # used only to make Travis UI show description
+      name: Backend (Python 2.7)
 
       language: python
       python: 2.7
@@ -60,10 +60,11 @@ jobs:
         - pipenv run py.test -vv --color=yes --cov=skylines --cov-report term-missing:skip-covered
 
     - <<: *backend-test
+      name: Backend (Python 3.5)
       python: 3.5
 
     - stage: test
-      env: NAME=black         # used only to make Travis UI show description
+      name: Black
 
       language: python
       python: 3.6
@@ -75,7 +76,7 @@ jobs:
         - black config migrations skylines tests uwsgi *.py --check
 
     - stage: test
-      env: NAME=frontend      # used only to make Travis UI show description
+      name: Frontend
 
       language: node_js
       node_js: 10
