--- a/uwsgi/skylines.ini
+++ b/uwsgi/skylines.ini
@@ -1,8 +1,7 @@
 [uwsgi]
 chdir = /home/skylines/src/
 wsgi-file = /home/skylines/src/uwsgi/skylines.py
-socket = /run/skylines/skylines-uwsgi.socket
-stats = /run/skylines/skylines-uwsgi-stats.socket
+http-socket = 127.0.0.1:9115
 protocol = http
 threads = 10
 chmod-socket = 777
