--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,7 @@ shapely = "==1.6.4.post2"
 "crc16" = "==0.1.1"
 pytz = "*"
 celery = {extras = ["redis"], version = "<3.2,>=3.1"}
+redis = "<3.0"
 xcsoar = "==0.6.4"
 aerofiles = "==1.0.0"
 "enum34" = "==1.1.6"
