Caddy: Log to stdout

--- a/systemd/mapproxy.service
+++ b/systemd/mapproxy.service
@@ -5,10 +5,9 @@ After=network.target
 [Service]
 SyslogIdentifier=mapproxy
 WorkingDirectory=/home/skylines/src
-ExecStart=/usr/local/bin/pipenv run gunicorn -b 127.0.0.1:9109 -w 10 --no-sendfile --access-logfile="-" wsgi_mapproxy
-ExecReload=/bin/kill -s HUP $MAINPID
-ExecStop=/bin/kill -s TERM $MAINPID
-PrivateTmp=true
+ExecStart=/usr/local/bin/pipenv run uwsgi uwsgi/mapproxy.ini
+Type=notify
+NotifyAccess=all
 Restart=on-failure
 
 [Install]
