--- a/Caddyfile
+++ b/Caddyfile
@@ -1,7 +1,7 @@
 # https://caddyserver.com configuration for the production server
 
 skylines.aero {
-    log /home/skylines/caddy/caddy.log
+    log stdout
 
     root /home/skylines/src/skylines/frontend/static
     gzip
