--- a/Pipfile
+++ b/Pipfile
@@ -31,7 +31,7 @@ gevent = "==1.4.0"
 webargs = "*"
 flask-oauthlib = "*"
 requests-oauthlib = ">=0.6.2,<1.2.0"  # see https://github.com/lepture/flask-oauthlib/pull/388
-raven = {extras = ["flask"],version = "==6.10.0"}
+sentry-sdk = {extras = ["flask"],version = "==0.7.10"}
 mapproxy = "*"
 gunicorn = "*"
 
