--- a/systemd/skylines.service
+++ b/systemd/skylines.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 SyslogIdentifier=skylines
 WorkingDirectory=/home/skylines/src
-ExecStart=/usr/local/bin/pipenv run gunicorn -b 127.0.0.1:9115 -w 10 --no-sendfile --access-logfile="-" wsgi_skylines
+ExecStart=/usr/local/bin/pipenv run gunicorn -b 127.0.0.1:9115 -w 10 --no-sendfile wsgi_skylines
 ExecReload=/bin/kill -s HUP $MAINPID
 ExecStop=/bin/kill -s TERM $MAINPID
 PrivateTmp=true
