--- a/ember/package.json
+++ b/ember/package.json
@@ -50,7 +50,7 @@
     "ember-font-awesome": "^4.0.0-rc.4",
     "ember-freestyle": "^0.10.0",
     "ember-href-to": "^3.1.0",
-    "ember-intl": "^4.0.0-beta.10",
+    "ember-intl": "^4.0.0",
     "ember-intl-cp-validations": "^3.0.1",
     "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
