--- a/systemd/celery.service
+++ b/systemd/celery.service
@@ -6,7 +6,7 @@ After=network.target
 SyslogIdentifier=celery
 WorkingDirectory=/home/skylines/src
 ExecStart=/usr/local/bin/pipenv run python manage.py celery runworker
-Restart=on-failure
+Restart=always
 
 [Install]
 WantedBy=default.target
