--- a/ember/package.json
+++ b/ember/package.json
@@ -43,6 +43,7 @@
     "ember-cli-sentry": "^4.1.0",
     "ember-cli-shims": "^1.1.0",
     "ember-cli-uglify": "^3.0.0",
+    "ember-click-outside": "^1.2.0",
     "ember-concurrency": "^1.1.0",
     "ember-cookies": "^0.4.0",
     "ember-cp-validations": "^3.5.5",
