--- a/ember/package.json
+++ b/ember/package.json
@@ -20,6 +20,7 @@
     "remarkable": "^1.7.2"
   },
   "devDependencies": {
+    "@ember/jquery": "^1.0.0",
     "@ember/optional-features": "^1.0.0",
     "@pollyjs/ember": "^2.6.3",
     "bigscreen": "^2.0.5",
