--- a/ember/package.json
+++ b/ember/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@ember/jquery": "^1.1.0",
     "@ember/optional-features": "^1.1.0",
+    "@ember/render-modifiers": "^1.0.2",
     "@pollyjs/ember": "^2.6.3",
     "bigscreen": "^2.0.5",
     "bootstrap-sass": "^3.4.1",
