Add  script using ember-template-lint

--- a/.travis.yml
+++ b/.travis.yml
@@ -96,5 +96,6 @@ jobs:
         - bower install
 
       script:
-        - yarn lint
+        - yarn lint:js
+        - yarn lint:hbs
         - yarn test
