--- a/ember/package.json
+++ b/ember/package.json
@@ -12,7 +12,8 @@
   "repository": "",
   "scripts": {
     "build": "ember build",
-    "lint": "eslint . --cache",
+    "lint:js": "eslint . --cache",
+    "lint:hbs": "ember-template-lint .",
     "start": "ember serve",
     "test": "ember test"
   },
@@ -65,6 +66,7 @@
     "ember-simple-auth": "^1.9.2",
     "ember-source": "~3.11.1",
     "ember-svg-jar": "^2.2.3",
+    "ember-template-lint": "^1.6.1",
     "ember-test-selectors": "^2.1.0",
     "ember-truth-helpers": "^2.1.0",
     "ember-web-app": "^3.0.1",
