--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
-dist: trusty
+dist: bionic
+
 branches:
   except:
   - /^dependabot\/.*$/
@@ -33,7 +34,7 @@ jobs:
         apt:
           packages:
             - postgresql-9.5-postgis-2.3
-            - python3.5-dev
+            - python-dev
 
       services:
         - postgresql
@@ -60,8 +61,8 @@ jobs:
         - pipenv run py.test -vv --color=yes --cov=skylines --cov-report term-missing:skip-covered
 
     - <<: *backend-test
-      name: Backend (Python 3.5)
-      python: 3.5
+      name: Backend (Python 3.6)
+      python: 3.6
 
     - stage: test
       name: Black
