--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,6 +2,7 @@
   "extends": [
     "config:base"
   ],
+  "enabledManagers": ["npm"]
   "rangeStrategy": "bump",
   "semanticCommits": false,
   "postUpdateOptions": ["yarnDedupeHighest"]
