--- a/ember/package.json
+++ b/ember/package.json
@@ -51,6 +51,7 @@
     "ember-concurrency": "^1.2.0",
     "ember-cookies": "^0.4.0",
     "ember-cp-validations": "^3.5.6",
+    "ember-fetch": "^8.0.1",
     "ember-font-awesome": "^4.0.0-rc.4",
     "ember-freestyle": "^0.12.0",
     "ember-functional-modifiers": "^0.5.0",
