--- a/ember/package.json
+++ b/ember/package.json
@@ -25,6 +25,7 @@
     "@ember/optional-features": "^1.3.0",
     "@ember/render-modifiers": "^1.0.2",
     "@pollyjs/ember": "^4.3.0",
+    "babel-eslint": "^10.1.0",
     "bigscreen": "^2.0.5",
     "bootstrap-sass": "^3.4.1",
     "broccoli-asset-rev": "^3.0.0",
