--- a/ember/package.json
+++ b/ember/package.json
@@ -24,6 +24,8 @@
     "@ember/jquery": "^1.1.0",
     "@ember/optional-features": "^1.3.0",
     "@ember/render-modifiers": "^1.0.2",
+    "@glimmer/component": "^1.0.0",
+    "@glimmer/tracking": "^1.0.0",
     "@pollyjs/ember": "^4.3.0",
     "babel-eslint": "^10.1.0",
     "bigscreen": "^2.0.5",
