--- a/ember/bower.json
+++ b/ember/bower.json
@@ -5,7 +5,6 @@
     "flot-marks": "https://github.com/TobiasLohner/flot-marks.git#f09ded70f5a229a38ba0b9cfa92dbb448ca4daaf",
     "jquery": "1.10.2",
     "sidebar-v2": "0.2.1",
-    "eonasdan-bootstrap-datetimepicker": "https://github.com/TobiasLohner/bootstrap-datetimepicker.git#c36342415a1be8fa013548402bf01718ca93d454",
-    "pace": "^1.0.2"
+    "eonasdan-bootstrap-datetimepicker": "https://github.com/TobiasLohner/bootstrap-datetimepicker.git#c36342415a1be8fa013548402bf01718ca93d454"
   }
 }
