--- a/ember/package.json
+++ b/ember/package.json
@@ -42,6 +42,7 @@
     "ember-cli-deploy-compress": "^0.3.2",
     "ember-cli-deploy-display-revisions": "^2.0.0",
     "ember-cli-deploy-revision-data": "^1.0.0",
+    "ember-cli-deploy-sentry-cli": "^2.2.0",
     "ember-cli-deploy-with-rsync": "^0.3.0",
     "ember-cli-htmlbars": "^5.1.2",
     "ember-cli-inject-live-reload": "^2.0.2",
@@ -80,6 +81,7 @@
     "eslint-plugin-ember": "^8.7.0",
     "eslint-plugin-import-helpers": "^1.0.2",
     "eslint-plugin-prettier": "^3.1.4",
+    "git-repo-info": "^2.1.1",
     "loader.js": "^4.7.0",
     "node-sass": "^4.14.1",
     "prettier": "2.0.5",
