--- a/ember/package.json
+++ b/ember/package.json
@@ -27,6 +27,8 @@
     "@glimmer/component": "^1.0.0",
     "@glimmer/tracking": "^1.0.0",
     "@pollyjs/ember": "^4.3.0",
+    "@sentry/browser": "^5.17.0",
+    "@sentry/integrations": "^5.17.0",
     "babel-eslint": "^10.1.0",
     "bigscreen": "^2.0.5",
     "bootstrap-sass": "^3.4.1",
@@ -47,7 +49,6 @@
     "ember-cli-htmlbars": "^5.1.2",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sass": "^10.0.1",
-    "ember-cli-sentry": "^4.1.0",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-uglify": "^3.0.0",
     "ember-click-outside": "^1.3.0",
