--- a/ember/package.json
+++ b/ember/package.json
@@ -24,6 +24,7 @@
     "@ember/jquery": "^1.1.0",
     "@ember/optional-features": "^1.3.0",
     "@ember/render-modifiers": "^1.0.2",
+    "@ember-intl/cp-validations": "^4.0.1",
     "@glimmer/component": "^1.0.0",
     "@glimmer/tracking": "^1.0.0",
     "@pollyjs/ember": "^5.0.0",
@@ -61,7 +62,6 @@
     "ember-functional-modifiers": "^0.5.0",
     "ember-href-to": "^3.1.0",
     "ember-intl": "^4.4.0",
-    "ember-intl-cp-validations": "^3.0.1",
     "ember-load-initializers": "^2.1.1",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-page-title": "^5.2.3",
