--- a/ember/package.json
+++ b/ember/package.json
@@ -58,11 +58,11 @@
     "ember-fetch": "^8.0.1",
     "ember-font-awesome": "^4.0.0-rc.4",
     "ember-freestyle": "^0.12.0",
-    "ember-functional-modifiers": "^0.5.0",
     "ember-href-to": "^3.1.0",
     "ember-intl": "^4.4.1",
     "ember-load-initializers": "^2.1.1",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-modifier": "^1.0.3",
     "ember-page-title": "^5.2.3",
     "ember-percy": "^1.6.0",
     "ember-power-select": "^2.3.5",
