--- a/ember/package.json
+++ b/ember/package.json
@@ -91,8 +91,7 @@
     "node": ">= 4"
   },
   "resolutions": {
-    "ember-concurrency": "^1.2.1",
-    "ember-intl/intl": "andyearnshaw/Intl.js"
+    "ember-concurrency": "^1.2.1"
   },
   "ember-addon": {
     "paths": [
