--- a/ember/package.json
+++ b/ember/package.json
@@ -88,7 +88,7 @@
     "qunit-dom": "^1.2.0"
   },
   "engines": {
-    "node": ">= 4"
+    "node": "^12.18.0"
   },
   "resolutions": {
     "ember-concurrency": "^1.2.1",
