--- a/ember/package.json
+++ b/ember/package.json
@@ -21,10 +21,10 @@
     "remarkable": "^2.0.1"
   },
   "devDependencies": {
+    "@ember-intl/cp-validations": "^4.0.1",
     "@ember/jquery": "^1.1.0",
     "@ember/optional-features": "^1.3.0",
     "@ember/render-modifiers": "^1.0.2",
-    "@ember-intl/cp-validations": "^4.0.1",
     "@glimmer/component": "^1.0.0",
     "@glimmer/tracking": "^1.0.0",
     "@pollyjs/ember": "^5.0.0",
@@ -55,6 +55,8 @@
     "ember-concurrency": "^1.2.1",
     "ember-cookies": "^0.5.2",
     "ember-cp-validations": "^3.5.6",
+    "ember-css-modules": "^1.3.1",
+    "ember-css-modules-sass": "^1.1.0",
     "ember-fetch": "^8.0.1",
     "ember-font-awesome": "^4.0.0-rc.4",
     "ember-freestyle": "^0.12.0",
