--- a/ember/package.json
+++ b/ember/package.json
@@ -18,7 +18,8 @@
     "test": "ember test"
   },
   "dependencies": {
-    "remarkable": "^2.0.1"
+    "remarkable": "^2.0.1",
+    "sidebar-v2": "^0.4.0"
   },
   "devDependencies": {
     "@ember-intl/cp-validations": "^4.0.1",
