--- a/ember/package.json
+++ b/ember/package.json
@@ -39,6 +39,7 @@
     "ember-cli": "~3.19.0",
     "ember-cli-babel": "^7.21.0",
     "ember-cli-dependency-checker": "^3.2.0",
+    "ember-cli-dependency-lint": "^1.1.3",
     "ember-cli-deploy": "^1.0.2",
     "ember-cli-deploy-build": "^2.0.0",
     "ember-cli-deploy-compress": "^0.3.2",
