--- a/ember/package.json
+++ b/ember/package.json
@@ -38,6 +38,7 @@
     "ember-bootstrap": "^3.1.4",
     "ember-cli": "~3.19.0",
     "ember-cli-babel": "^7.21.0",
+    "ember-cli-bundle-analyzer": "^0.2.1",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-dependency-lint": "^1.1.3",
     "ember-cli-deploy": "^1.0.2",
