CI: Add missing  env var

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,3 +137,5 @@ jobs:
 
       - run: yarn ember deploy production --activate --verbose
         working-directory: ./ember
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
