CesiumPlaneModel: Convert to Glimmer component

--- a/ember/package.json
+++ b/ember/package.json
@@ -75,6 +75,7 @@
     "ember-percy": "^1.6.0",
     "ember-power-select": "^2.3.5",
     "ember-qunit": "^4.6.0",
+    "ember-render-helpers": "^0.1.1",
     "ember-resolver": "^8.0.0",
     "ember-simple-auth": "^3.0.0",
     "ember-source": "~3.19.0",
