--- a/ember/package.json
+++ b/ember/package.json
@@ -70,7 +70,7 @@
     "ember-intl": "^4.4.1",
     "ember-load-initializers": "^2.1.1",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-modifier": "^1.0.4",
+    "ember-modifier": "^2.0.1",
     "ember-page-title": "^5.2.3",
     "ember-percy": "^1.6.0",
     "ember-power-select": "^2.3.5",
@@ -101,7 +101,8 @@
     "node": "^12.18.0"
   },
   "resolutions": {
-    "ember-maybe-in-element": "^0.4.0"
+    "ember-maybe-in-element": "^0.4.0",
+    "ember-modifier": "^2.0.0"
   },
   "ember-addon": {
     "paths": [
