Use  to install and pin Node version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,9 +22,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: '12.x'
+      - uses: volta-cli/action@v1
 
       - run: yarn install --frozen-lockfile
         working-directory: ./ember
@@ -126,9 +124,7 @@ jobs:
           env: production
 
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: '12.x'
+      - uses: volta-cli/action@v1
 
       - run: yarn install --frozen-lockfile
         working-directory: ./ember
