--- a/ember/package.json
+++ b/ember/package.json
@@ -116,5 +116,9 @@
     "singleQuote": true,
     "tabWidth": 2,
     "trailingComma": "all"
+  },
+  "volta": {
+    "node": "12.18.3",
+    "yarn": "1.22.4"
   }
 }
