--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: volta-cli/action@v1
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
 
       - run: yarn install --frozen-lockfile
         working-directory: ./ember
@@ -124,7 +126,9 @@ jobs:
           env: production
 
       - uses: actions/checkout@v2
-      - uses: volta-cli/action@v1
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
 
       - run: yarn install --frozen-lockfile
         working-directory: ./ember
