--- a/ember/package.json
+++ b/ember/package.json
@@ -29,9 +29,6 @@
     "@ember/jquery": "^1.1.0",
     "@ember/optional-features": "^1.3.0",
     "@ember/render-modifiers": "^1.0.2",
-    "@embroider/compat": "^0.19.0",
-    "@embroider/core": "^0.19.0",
-    "@embroider/webpack": "^0.19.0",
     "@glimmer/component": "^1.0.1",
     "@glimmer/tracking": "^1.0.1",
     "@sentry/browser": "^5.20.1",
@@ -95,6 +92,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "git-repo-info": "^2.1.1",
     "loader.js": "^4.7.0",
+    "match-json": "^1.3.2",
     "node-sass": "^4.14.1",
     "prettier": "2.0.5",
     "qunit-console-grouper": "^0.2.0",
