--- a/ember/package.json
+++ b/ember/package.json
@@ -18,92 +18,92 @@
     "test": "ember test"
   },
   "dependencies": {
-    "cesium": "^1.72.0",
-    "ol": "^5.3.3",
-    "olcs": "^2.10.0",
-    "remarkable": "^2.0.1",
-    "screenfull": "^5.0.2"
+    "cesium": "1.72.0",
+    "ol": "5.3.3",
+    "olcs": "2.10.0",
+    "remarkable": "2.0.1",
+    "screenfull": "5.0.2"
   },
   "devDependencies": {
-    "@ember-intl/cp-validations": "^4.0.1",
-    "@ember/jquery": "^1.1.0",
-    "@ember/optional-features": "^1.3.0",
-    "@ember/render-modifiers": "^1.0.2",
-    "@embroider/compat": "^0.19.0",
-    "@embroider/core": "^0.19.0",
-    "@embroider/webpack": "^0.19.0",
-    "@glimmer/component": "^1.0.1",
-    "@glimmer/tracking": "^1.0.1",
-    "@sentry/browser": "^5.20.1",
-    "@sentry/integrations": "^5.20.1",
-    "babel-eslint": "^10.1.0",
-    "bootstrap-sass": "^3.4.1",
-    "broccoli-asset-rev": "^3.0.0",
-    "ember-ajax": "^5.0.0",
-    "ember-auto-import": "^1.6.0",
-    "ember-bootstrap": "^3.1.4",
-    "ember-cli": "~3.20.0",
-    "ember-cli-babel": "^7.22.1",
-    "ember-cli-bundle-analyzer": "^0.2.1",
-    "ember-cli-dependency-checker": "^3.2.0",
-    "ember-cli-dependency-lint": "^1.1.3",
-    "ember-cli-deploy": "^1.0.2",
-    "ember-cli-deploy-build": "^2.0.0",
-    "ember-cli-deploy-compress": "^0.3.2",
-    "ember-cli-deploy-display-revisions": "^2.0.0",
-    "ember-cli-deploy-revision-data": "^1.0.0",
-    "ember-cli-deploy-sentry-cli": "^2.2.0",
-    "ember-cli-deploy-with-rsync": "^0.3.0",
-    "ember-cli-htmlbars": "^5.2.0",
-    "ember-cli-inject-live-reload": "^2.0.2",
-    "ember-cli-mirage": "^1.1.7",
-    "ember-cli-notifications": "^6.3.0",
-    "ember-cli-sass": "^10.0.1",
-    "ember-cli-uglify": "^3.0.0",
-    "ember-click-outside": "^1.3.0",
-    "ember-concurrency": "^1.2.1",
-    "ember-cookies": "^0.5.2",
-    "ember-cp-validations": "^3.5.6",
-    "ember-css-modules": "^1.3.1",
-    "ember-css-modules-sass": "^1.1.0",
-    "ember-fetch": "^8.0.1",
-    "ember-flatpickr": "^2.16.2",
-    "ember-freestyle": "^0.12.0",
-    "ember-href-to": "^3.1.0",
-    "ember-intl": "^4.4.1",
-    "ember-load-initializers": "^2.1.1",
-    "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-modifier": "^2.1.0",
-    "ember-page-title": "^5.2.3",
-    "ember-percy": "^1.6.0",
-    "ember-power-select": "^2.3.5",
-    "ember-qunit": "^4.6.0",
-    "ember-render-helpers": "^0.1.1",
-    "ember-resolver": "^8.0.0",
-    "ember-simple-auth": "^3.0.0",
-    "ember-source": "~3.20.3",
-    "ember-svg-jar": "^2.2.3",
-    "ember-template-lint": "^2.9.1",
-    "ember-test-selectors": "^4.1.0",
-    "ember-truth-helpers": "^2.1.0",
-    "ember-web-app": "^4.0.0",
-    "eslint": "^7.6.0",
-    "eslint-config-prettier": "^6.11.0",
+    "@ember-intl/cp-validations": "4.0.1",
+    "@ember/jquery": "1.1.0",
+    "@ember/optional-features": "1.3.0",
+    "@ember/render-modifiers": "1.0.2",
+    "@embroider/compat": "0.19.0",
+    "@embroider/core": "0.19.0",
+    "@embroider/webpack": "0.19.0",
+    "@glimmer/component": "1.0.1",
+    "@glimmer/tracking": "1.0.1",
+    "@sentry/browser": "5.20.1",
+    "@sentry/integrations": "5.20.1",
+    "babel-eslint": "10.1.0",
+    "bootstrap-sass": "3.4.1",
+    "broccoli-asset-rev": "3.0.0",
+    "ember-ajax": "5.0.0",
+    "ember-auto-import": "1.6.0",
+    "ember-bootstrap": "3.1.4",
+    "ember-cli": "3.20.0",
+    "ember-cli-babel": "7.22.1",
+    "ember-cli-bundle-analyzer": "0.2.1",
+    "ember-cli-dependency-checker": "3.2.0",
+    "ember-cli-dependency-lint": "1.1.3",
+    "ember-cli-deploy": "1.0.2",
+    "ember-cli-deploy-build": "2.0.0",
+    "ember-cli-deploy-compress": "0.3.2",
+    "ember-cli-deploy-display-revisions": "2.0.0",
+    "ember-cli-deploy-revision-data": "1.0.0",
+    "ember-cli-deploy-sentry-cli": "2.2.0",
+    "ember-cli-deploy-with-rsync": "0.3.0",
+    "ember-cli-htmlbars": "5.2.0",
+    "ember-cli-inject-live-reload": "2.0.2",
+    "ember-cli-mirage": "1.1.7",
+    "ember-cli-notifications": "6.3.0",
+    "ember-cli-sass": "10.0.1",
+    "ember-cli-uglify": "3.0.0",
+    "ember-click-outside": "1.3.0",
+    "ember-concurrency": "1.2.1",
+    "ember-cookies": "0.5.2",
+    "ember-cp-validations": "3.5.6",
+    "ember-css-modules": "1.3.1",
+    "ember-css-modules-sass": "1.1.0",
+    "ember-fetch": "8.0.1",
+    "ember-flatpickr": "2.16.2",
+    "ember-freestyle": "0.12.0",
+    "ember-href-to": "3.1.0",
+    "ember-intl": "4.4.1",
+    "ember-load-initializers": "2.1.1",
+    "ember-maybe-import-regenerator": "0.1.6",
+    "ember-modifier": "2.1.0",
+    "ember-page-title": "5.2.3",
+    "ember-percy": "1.6.0",
+    "ember-power-select": "2.3.5",
+    "ember-qunit": "4.6.0",
+    "ember-render-helpers": "0.1.1",
+    "ember-resolver": "8.0.0",
+    "ember-simple-auth": "3.0.0",
+    "ember-source": "3.20.3",
+    "ember-svg-jar": "2.2.3",
+    "ember-template-lint": "2.9.1",
+    "ember-test-selectors": "4.1.0",
+    "ember-truth-helpers": "2.1.0",
+    "ember-web-app": "4.0.0",
+    "eslint": "7.6.0",
+    "eslint-config-prettier": "6.11.0",
     "eslint-config-simplabs": "0.4.0",
-    "eslint-plugin-ember": "^8.9.2",
-    "eslint-plugin-import-helpers": "^1.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "git-repo-info": "^2.1.1",
-    "loader.js": "^4.7.0",
-    "match-json": "^1.3.2",
-    "node-sass": "^4.14.1",
+    "eslint-plugin-ember": "8.9.2",
+    "eslint-plugin-import-helpers": "1.1.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "git-repo-info": "2.1.1",
+    "loader.js": "4.7.0",
+    "match-json": "1.3.2",
+    "node-sass": "4.14.1",
     "prettier": "2.0.5",
-    "qunit-console-grouper": "^0.2.0",
-    "qunit-dom": "^1.4.0"
+    "qunit-console-grouper": "0.2.0",
+    "qunit-dom": "1.4.0"
   },
   "resolutions": {
-    "ember-maybe-in-element": "^0.4.0",
-    "ember-modifier": "^2.1.0"
+    "ember-maybe-in-element": "0.4.0",
+    "ember-modifier": "2.1.0"
   },
   "ember-addon": {
     "paths": [
