renovate: Group  packages

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -15,6 +15,12 @@
       "^@embroider/"
     ]
   }, {
+    "groupName": "glimmer",
+    "packagePatterns": [
+      "@glimmer/component",
+      "@glimmer/tracking"
+    ]
+  }, {
     "packageNames": ["ember-cli", "ember-data", "ember-source"],
     "separateMinorPatch": true
   }]
