--- a/ember/package.json
+++ b/ember/package.json
@@ -76,7 +76,7 @@
     "ember-modifier": "2.1.0",
     "ember-page-title": "5.2.3",
     "ember-percy": "1.6.0",
-    "ember-power-select": "2.3.5",
+    "ember-power-select": "3.0.6",
     "ember-qunit": "4.6.0",
     "ember-render-helpers": "0.1.1",
     "ember-resolver": "8.0.0",
@@ -102,6 +102,7 @@
     "qunit-dom": "1.4.0"
   },
   "resolutions": {
+    "ember-element-helper": "0.3.1",
     "ember-maybe-in-element": "0.4.0",
     "ember-modifier": "2.1.0"
   },
