--- a/ember/package.json
+++ b/ember/package.json
@@ -34,6 +34,7 @@
     "@embroider/webpack": "0.20.0",
     "@glimmer/component": "1.0.1",
     "@glimmer/tracking": "1.0.1",
+    "@percy/ember": "2.1.3",
     "@sentry/browser": "5.20.1",
     "@sentry/integrations": "5.20.1",
     "babel-eslint": "10.1.0",
@@ -75,7 +76,6 @@
     "ember-maybe-import-regenerator": "0.1.6",
     "ember-modifier": "2.1.0",
     "ember-page-title": "5.2.3",
-    "ember-percy": "1.6.0",
     "ember-power-select": "4.0.3",
     "ember-qunit": "4.6.0",
     "ember-render-helpers": "0.1.1",
