--- a/ember/package.json
+++ b/ember/package.json
@@ -102,6 +102,7 @@
     "qunit-dom": "1.4.0"
   },
   "resolutions": {
+    "@percy/agent": "0.24.3",
     "ember-element-helper": "0.3.1",
     "ember-maybe-in-element": "1.0.0",
     "ember-modifier": "2.1.0"
